# loop-spec

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/loop_spec/: __init__.py
python/tests/: test_loop_spec.py
schema/: loop-spec.json
