[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-spec-py"
version = "0.1.0"
description = "Python implementation of the loop-spec specification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Donald Thompson" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/witt3rd/loop-spec"
Repository = "https://github.com/witt3rd/loop-spec"

[tool.hatch.build.targets.wheel]
packages = ["loop_spec"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
